--- a/WebStoreApp/WebStoreApp/Views/Product/Create.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShopApp.Models.Product.ProductCreateVM
+﻿@model WebStoreApp.Models.Product.ProductCreateVM
 @{
     ViewData["Title"] = "Create";
 }
