--- a/WebStoreApp/WebStoreApp/Views/Product/Delete.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShopApp.Models.Product.ProductDeleteVM
+﻿@model WebStoreApp.Models.Product.ProductDeleteVM
 @{
     ViewData["Title"] = "Delete";
 }
