--- a/WebStoreApp/WebStoreApp/Views/Product/Details.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShopApp.Models.Product.ProductDetailsVM
+﻿@model WebStoreApp.Models.Product.ProductDetailsVM
 @{
     ViewData["Title"] = "Details";
 }
