--- a/WebStoreApp/WebStoreApp/Views/Product/Edit.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShopApp.Models.Product.ProductEditVM
+﻿@model WebStoreApp.Models.Product.ProductEditVM
 @{
     ViewData["Title"] = "Edit";
 }
