--- a/WebStoreApp/WebStoreApp/Views/Product/Index.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WebShopApp.Models.Product.ProductIndexVM>
+﻿@model IEnumerable<WebStoreApp.Models.Product.ProductIndexVM>
 @{
     ViewData["Title"] = "Index";
 }
