--- a/WebStoreApp/WebStoreApp/Views/Product/Index.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Product/Index.cshtml
@@ -82,21 +82,20 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Discount) %
                 </td>
-
                 <td>
-
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn success">Details</a>
+                    @if (this.User.Identity.IsAuthenticated)
+                    {
+                        <a asp-action="Create" asp-controller="Order" asp-route-id="@item.Id" class="btn btn-warning">Order</a>
+                    }
                     @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
                     {
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        
-                    }
-                    
-                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn success">Details</a>
-
-                    @if ((this.User.Identity.IsAuthenticated) && (this.User.IsInRole("Administrator")))
-                    {
                     <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn danger">Delete</a>
                     }
+                    
+
+                 
 
                 </td>
             </tr>
