--- a/WebStoreApp/WebStoreApp/Views/Order/Create.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Order/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebShopApp.Models.Order.OrderCreateVM
+﻿@model WebStoreApp.Models.Order.OrderCreateVM
 @{
     ViewData["Title"] = "Create";
 }
