--- a/WebStoreApp/WebStoreApp/Views/Shared/_Layout.cshtml
+++ b/WebStoreApp/WebStoreApp/Views/Shared/_Layout.cshtml
@@ -41,9 +41,11 @@
                             data-bs-toggle="dropdown" aria-expanded="false">
                         Static Modul
                     </button>
+
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                         <li><a class="dropdown-item" href="/Client/Index">Clients</a></li>
                         <li><a class="dropdown-item" href="/Order/Index">Orders</a></li>
+                        <li><a class="dropdown-item" href="/Statistics/Index">Statistics</a></li>
                     </ul>
                         </li>   
                         }
